<resources>
    <string name="app_name">OfferMachi</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="home">Home</string>
    <string name="profile">My Profile &amp; My Store</string>
    <string name="user_mylocation">My Location</string>
    <string name="user_account">My Account</string>
    <string name="user_profile">My Profile</string>
    <string name="feeds">Feeds</string>
    <string name="smartshopping">Smart Shopping</string>
    <string name="dealsday">Deals of the Day</string>
    <string name="mycoupons">My Coupons</string>
    <string name="follow">iFollow</string>
    <string name="fav">Favourites</string>
    <string name="rate">Rate App</string>
    <string name="invite">Invite a Friend</string>
    <string name="help">Help &amp; Faqs</string>
    <string name="customer">Customer Support</string>
    <string name="notification">Notification</string>
    <string name="do_not_dis">Do not disturb</string>
    <string name="terms">Terms &amp; Condition</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_activity_retalier_dashboard">RetalierDashboard</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="offersdeals">Offer/Discount</string>
    <string name="addnew">Add New Offer/Deals</string>
    <string name="viewoffer">View Offer/Deals List</string>
    <string name="dealsoftheday">Deals of the Day</string>
    <string name="redeemcode">Redeem Code</string>
    <string name="qrcode">Qr Code Scanner</string>
    <string name="couponcode">Coupon Code</string>
    <string name="statistics">Statistics</string>
    <string name="push">Push Offers</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dailog_title">Select Follower</string>
    <string name="ok_label">Send Offers</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clearall_label">clearall</string>
    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="FCM_PREF" translatable="false">com.desired.offermachi.fcm_pref</string>
    <string name="FCM_TOKEN" translatable="false">com.desired.offermachi.fcm_token</string>
    <string name="google_key" translatable="false">AIzaSyBY0qoVDPVESCj2rh6U-TlcHOQzq8q9Ky0</string>

    <string-array name="status_item">
        <item>1 Hours</item>
        <item>2 Hours</item>
        <item>5 Hours</item>

    </string-array>

    <string-array name="list_of_location">
        <item>Vijay nagar</item>
        <item>Vishanu puri</item>
        <item>LIG</item>
        <item>Palasiya</item>
        <item>Geeta bhawan</item>
        <item>Rasoma</item>
        <item>Bhawarkua</item>
        <item>Navalkha</item>

    </string-array>

    <!--<string name="google_api_key1">AIzaSyCVBn21qaBTnSmxNUYDE3obEKqalu2NeEg</string>-->
    <string name="google_api_key1">AIzaSyDn-Ld3q3Ohl2e26niTSX5VPyjhjdmsMO4</string>
   <!-- <item>12 Hours</item>
    <item>1 Day</item>
    <item>2 Day</item>
    <item>5 Day</item>
    <item>1 Month</item>
    <item>2 Month</item>
    <item>5 Month</item>-->
</resources>
